# wamv_rise

./: .gitignore
wamv_rise/: CMakeLists.txt  package.xml
wamv_rise_bringup/: CMakeLists.txt  package.xml
wamv_rise_bringup/launch/: bringup_localization.launch  bringup_surface_payload.launch  bringup_underwater_payload.launch  bringup_wamv_rise.launch
wamv_rise_bringup/launch/include/: description.launch.xml  livox.launch.xml  localization.launch.xml  norbit.launch.xml  velodyne.launch.xml  velodyne_test.launch.xml  xsens.launch.xml
wamv_rise_config/: CMakeLists.txt  package.xml
wamv_rise_config/config/: livox_lidar_config.json  norbit.yaml  velodyne_manager.yaml  velodyne_scan.yaml  velodyne_transform.yaml  xsens.yaml  xsens_imu.yaml
wamv_rise_description/: CMakeLists.txt  package.xml
wamv_rise_description/launch/: description.launch
wamv_rise_description/rviz/: config.rviz
wamv_rise_description/urdf/: base.urdf.xacro  base.urdf.xacro.old
