<?xml version="1.0"?>
<package format="2">
  <name>wamv_rise</name>
  <version>0.0.0</version>
  <description>The wamv_rise package</description>

  <maintainer email="mzhou@uri.edu">Mingxi ZHou</maintainer>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>